--- a/DirectX/DirectX.vcxproj.filters
+++ b/DirectX/DirectX.vcxproj.filters
@@ -1,153 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="shaders">
-      <UniqueIdentifier>{1c105709-4910-4e34-89d6-addf4689abe1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="shaders\Pixel Shaders">
-      <UniqueIdentifier>{23979741-f9e3-4d49-a6dc-660502436efd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="shaders\Vertex Shaders">
-      <UniqueIdentifier>{aa0f328d-fc34-4eaf-b60e-61fe6fab735f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="shaders\Headers">
-      <UniqueIdentifier>{75725a02-5187-427e-b4ed-7a9cc4dac817}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\math_helpers">
-      <UniqueIdentifier>{5f13cb45-a1df-4f3f-89d7-f5352647f463}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\math_helpers">
-      <UniqueIdentifier>{77c5bcfd-3f62-4ddd-bd06-37a5031f133c}</UniqueIdentifier>
-    </Filter>
+    <ClCompile Include="GraphicsInterface\ColorShader.cpp" />
+    <ClCompile Include="GraphicsInterface\D3DDevice.cpp" />
+    <ClCompile Include="GraphicsInterface\Graphics.cpp" />
+    <ClCompile Include="Math\Matrix.cpp" />
+    <ClCompile Include="Math\Vector2.cpp" />
+    <ClCompile Include="Math\Vector3.cpp" />
+    <ClCompile Include="Math\Vector4.cpp" />
+    <ClCompile Include="RenderStates\Camera.cpp" />
+    <ClCompile Include="System\Input.cpp" />
+    <ClCompile Include="System\main.cpp" />
+    <ClCompile Include="System\RenderPipeline.cpp" />
+    <ClCompile Include="System\RenderSystem.cpp" />
+    <ClCompile Include="System\System.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="System.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Graphics.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D3DDevice.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Header Files\math_helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector2.h">
-      <Filter>Header Files\math_helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector3.h">
-      <Filter>Header Files\math_helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Constants.h">
-      <Filter>Header Files\math_helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector4.h">
-      <Filter>Header Files\math_helpers</Filter>
-    </ClInclude>
-    <ClInclude Include="Matrix.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Model.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ColorShader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderPipeline.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderSystem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="GraphicsInterface\ColorShader.h" />
+    <ClInclude Include="GraphicsInterface\D3DDevice.h" />
+    <ClInclude Include="GraphicsInterface\Graphics.h" />
+    <ClInclude Include="Math\Constants.h" />
+    <ClInclude Include="Math\Matrix.h" />
+    <ClInclude Include="Math\Vector2.h" />
+    <ClInclude Include="Math\Vector3.h" />
+    <ClInclude Include="Math\Vector4.h" />
+    <ClInclude Include="RenderStates\Camera.h" />
+    <ClInclude Include="System\Input.h" />
+    <ClInclude Include="System\RenderPipeline.h" />
+    <ClInclude Include="System\RenderSystem.h" />
+    <ClInclude Include="System\System.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="System.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Graphics.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Input.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D3DDevice.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Camera.cpp">
-      <Filter>Source Files\math_helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Vector2.cpp">
-      <Filter>Source Files\math_helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Vector3.cpp">
-      <Filter>Source Files\math_helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Vector4.cpp">
-      <Filter>Source Files\math_helpers</Filter>
-    </ClCompile>
-    <ClCompile Include="Matrix.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ColorShader.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Model.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderPipeline.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderSystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ResourceCompile Include="DirectX.rc" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="VertexShader.hlsl">
-      <Filter>shaders\Vertex Shaders</Filter>
-    </FxCompile>
-    <FxCompile Include="PixelShader.hlsl">
-      <Filter>shaders\Pixel Shaders</Filter>
-    </FxCompile>
+    <FxCompile Include="Shaders\VertexShader.hlsl" />
+    <FxCompile Include="Shaders\PixelShader.hlsl" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="types_definitions.hlsli">
-      <Filter>shaders\Headers</Filter>
-    </None>
-    <None Include="Camera.ipp">
-      <Filter>Header Files\math_helpers</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="DirectX.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
+    <None Include="Shaders\types_definitions.hlsli" />
+    <None Include="RenderStates\Camera.ipp" />
   </ItemGroup>
 </Project>
