--- a/DirectX/DirectX.vcxproj
+++ b/DirectX/DirectX.vcxproj
@@ -32,10 +32,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="System\Input.cpp" />
-    <ClCompile Include="System\main.cpp" />
-    <ClCompile Include="System\RenderPipeline.cpp" />
-    <ClCompile Include="System\RenderSystem.cpp" />
-    <ClCompile Include="System\System.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="GraphicsInterface\RenderPipeline.cpp" />
+    <ClCompile Include="GraphicsInterface\RenderSystem.cpp" />
+    <ClCompile Include="System\App.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphicsInterface\ColorShader.h" />
@@ -51,9 +51,9 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="System\Input.h" />
-    <ClInclude Include="System\RenderPipeline.h" />
-    <ClInclude Include="System\RenderSystem.h" />
-    <ClInclude Include="System\System.h" />
+    <ClInclude Include="GraphicsInterface\RenderPipeline.h" />
+    <ClInclude Include="GraphicsInterface\RenderSystem.h" />
+    <ClInclude Include="System\App.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DirectX.rc" />
