--- a/DirectX/DirectX.vcxproj
+++ b/DirectX/DirectX.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Graphics\GraphicsD3D11\GraphicsSystemD3D11.cpp" />
     <ClCompile Include="Graphics\GraphicsSystem.cpp" />
     <ClCompile Include="Graphics\GraphicsTypes.cpp" />
+    <ClCompile Include="Math\Math.cpp" />
     <ClCompile Include="Math\Matrix.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
@@ -56,6 +57,7 @@
     <ClInclude Include="Graphics\GraphicsTypes.hpp" />
     <ClInclude Include="Math\Constants.h" />
     <ClInclude Include="Math\Defs.h" />
+    <ClInclude Include="Math\Math.hpp" />
     <ClInclude Include="Math\Matrix.h" />
     <ClInclude Include="Math\Vector2.h" />
     <ClInclude Include="Math\Vector3.h" />
